# tauri-vue3-template

./: LICENSE  README.md  index.html  package.json  tsconfig.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns  readme.md
src-tauri/src/: commands.rs  main.rs
src/components/: ConfigSetting.vue  MainComponent.vue  SubComponent.vue  Titlebar.vue  main-component.vue  sub-component.vue
src/components/atoms/: ASwitch.vue  ATextField.vue  a-slider.vue
src/components/config/: ColorForm.vue  ConfigSetting.vue  ConfigValueForm.vue  color-form.vue  config-setting.vue  config-value-form.vue
src/plugins/: common.ts
src/utils/: common.ts  config.ts  sql.ts
